# crossover

./: .gitignore  LICENSE  README.md  Readme.txt
Demo/: Readme.txt
Doc/: BD.dia  Client_classDiagram. dia  Server_classDiagram. dia  general.odt
Source/: CMakeLists.txt
Source/client/src/: CMakeLists.txt  HttpSession.cpp  HttpSession.hpp  Session.cpp  Session.h  agent.cpp  agent.hpp  client.cpp
Source/common/src/: AppLogger.cpp  AppLogger.hpp  CMakeLists.txt  SystemMeasurement.cpp  SystemMeasurement.hpp
Source/server/: CMakeLists.txt
Source/server/resource/: clientDefaultConf.xml  dbSchema.sql
Source/server/src/: CMakeLists.txt  ClientConfiguration.cpp  ClientConfiguration.h  ClientConfiguration.hpp  DBBackEnd.cpp  DBBackEnd.hpp  SMTPAgent.cpp  SMTPAgent.h  SMTPAgent.hpp  ServerSettings.cpp  ServerSettings.hpp  SimpleHttpServer.cpp  SimpleHttpServer.hpp  server.cpp  server.hpp  server.qrc
Source/server/test/: CMakeLists.txt  SMTPAgentUT.cpp  SMTPAgentUT.hpp
Source/share/CrossOver/: client.conf  server.conf
